[package]
name = "etp"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.7"
serde_derive = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
log = "0.4.14"
env_logger = "0.9.0"
chrono = "0.4"
prometheus={version="0.12.0"}
warp = "0.3"

[profile.dev]
panic = 'abort'

[profile.release]
panic = 'abort'